fix(display): Remove vertical Scrollbar on Main Menu #22

--- a/assets/stylesheets/01-structure.scss
+++ b/assets/stylesheets/01-structure.scss
@@ -37,7 +37,7 @@ nav {
     box-shadow: -5px 4px 4px 1px rgba(0, 0, 0, 0.25);
     color: $white;
     z-index: 20;
-    min-height: calc(100vh - #{$header-height});
+    min-height: calc(100vh - #{$header-height + 4});
 }
 
 aside {
